    - Add SRF support via a new ProjectSet processor. The new processor spec
      would not be recognized by old versions.
- Version: 17 (MinAcceptedVersion: 6)
    - Add scalar vs non-scalar designation to aggregator.
- Version: 18 (MinAcceptedVersion: 6)
    - New EvalContext field.
- Version: 19 (MinAcceptedVersion: 6)
    - More EvalContext fields.
- Version: 20 (MinAcceptedVersion: 6)
    - Add labels to tuple types.
- Version: 21 (MinAcceptedVersion: 6)
    - Permit non-public (mutation) columns in TableReader return values, when
      requested. The new processor spec would be ignored by old versions.
- MinAcceptedVersion: 21
    - Bump in preparation for the 2.1 release. A large amount of changes
      in both IMPORT and SQL execution have merged since 2.0. We have not
      adequately tested them in skewed version clusters to have confidence
      that they are compatible. We decided it was safer to bump the min
      version to prevent possible bugs at the cost of performance during
      the upgrade.
- Version: 22 (MinAcceptedVersion: 21)
    - Change date math to better align with PostgreSQL:
      https://github.com/cockroachdb/cockroach/pull/31146
- Version: 23 (MinAcceptedVersion: 23)
    - Refactoring of window functions. The main changes were reusing of renders
      whenever possible (for arguments and OVER clauses) which changed the way
      that information is propagated to windowers - a new field ArgsIdxs was
      introduced in place of ArgIdxStart and ArgCount. Another field was added
      to specify the output column for each window function (previously, this
      was derived from ArgIdxStart during execution).
- Version: 24 (MinAcceptedVersion: 24)
    - Remove the unused index filter expression field from the lookup join spec.
- Version: 25 (MinAcceptedVersion: 24)
    - Add locking strength and wait policy fields to TableReader, JoinReader,
      IndexSkipTableReader, and InterleavedReaderJoiner spec.