@@ -313,3 +313,16 @@ SELECT 1 FROM ((SELECT * FROM tab41973) UNION ALL (SELECT * FROM tab41973))
 1
 1
 1
+
+statement ok
+DROP TABLE IF EXISTS t1, t2;
+CREATE TABLE t1 (j JSONB);
+CREATE TABLE t2 (j JSONB);
+INSERT INTO t1 VALUES ('{"a": "b"}');
+INSERT INTO t2 VALUES ('{"c": "d"}');
+
+query T rowsort
+(SELECT j FROM t1) UNION (SELECT j FROM t2)
+----
+{"a": "b"}
+{"c": "d"}
